--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "^4.21.2",
+    "express-handlebars": "^8.0.1",
+    "express-session": "^1.18.1",
     "hbs": "^4.2.0",
     "morgan": "~1.9.1",
     "node": "^23.7.0",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "sequelize": "^6.37.5",
     "sqlite3": "^5.1.7"
   },
